Scoring UI; update mousemove

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
       margin: 0;
       overflow: hidden;
     }
+
+    #score {
+      border: 3px solid white;
+      color: white;
+      font-size: 24px;
+      left: 10px;
+      position: absolute;
+      padding: .5rem 1rem;
+      top: 10px;
+    }
   </style>
 </head>
 <body>
+  <div id="score">0</div>
   <script src="game.js"></script>
 </body>
 </html>
